--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "n8n-nodes-bimx-ifc-qto",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "BIM X – IFC Space QTO (Binary IFC in → XLSX/TSV out) powered by web-ifc",
   "license": "MIT",
+  "author": "BIM X Consulting",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "keywords": ["n8n-community-node-package","bim","ifc","web-ifc","qto"],
   "n8n": { "nodes": ["dist/nodes/BimxIfcSpaceQto.node.js"], "credentials": [] },
   "scripts": {
     "build": "tsc && node ./scripts/copy-wasm.cjs",
     "pack": "npm run build && npm pack",
     "publish:public": "npm run build && npm publish --access public"
   },
-  "dependencies": { "web-ifc": "^0.0.46", "xlsx": "^0.18.5" },
+  "files": ["dist", "LICENSE", "README.md"],
+  "dependencies": {
+    "web-ifc": "^0.0.46",
+    "xlsx": "^0.18.5"
+  },
   "peerDependencies": { "n8n-workflow": "*" },
   "devDependencies": {
     "@types/node": "^20.12.12",
