--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-bimx-ifc-qto",
-  "version": "0.1.15",
+  "version": "0.1.16",
   "description": "BIM X – IFC Space QTO (Binary IFC in → XLSX/TSV out) powered by web-ifc",
   "license": "MIT",
   "author": "BIM X Consulting",
@@ -8,20 +8,25 @@
   "types": "dist/index.d.ts",
   "keywords": ["n8n-community-node-package","bim","ifc","web-ifc","qto"],
   "n8n": { "nodes": ["dist/nodes/BimxIfcSpaceQto.node.js"], "credentials": [] },
-"scripts": {
-  "build": "tsc && node ./scripts/copy-assets.cjs",
-  "pack": "npm run build && npm pack",
-  "publish:public": "npm run build && npm publish --access public"
-},
-"files": ["dist", "LICENSE", "README.md"],
+  "scripts": {
+    "build": "tsc && node ./scripts/copy-assets.cjs",
+    "pack": "npm run build && npm pack",
+    "publish:public": "npm run build && npm publish --access public"
+  },
+  "files": ["dist", "LICENSE", "README.md"],
   "dependencies": {
-    "web-ifc": "^0.0.45",
+    "web-ifc": "^0.0.51",
     "xlsx": "^0.18.5"
   },
-  "peerDependencies": { "n8n-workflow": "*" },
+  "peerDependencies": {
+    "n8n-workflow": "*"
+  },
   "devDependencies": {
     "@types/node": "^20.12.12",
     "typescript": "^5.6.3",
     "n8n-workflow": "*"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
