--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-bimx-ifc-qto",
-  "version": "0.1.20",
+  "version": "0.1.21",
   "description": "BIM X – IFC Space QTO (Binary IFC in → XLSX/TSV out) powered by web-ifc",
   "license": "MIT",
   "author": "BIM X Consulting",
@@ -13,11 +13,11 @@
     "credentials": []
   },
   "scripts": {
-    "build": "tsc && node ./scripts/copy-assets.cjs",
-    "prepack": "npm run build",
-    "pack": "npm run build && npm pack",
-    "publish:public": "npm run build && npm publish --access public"
-  },
+  "build": "tsc && node ./scripts/copy-assets.cjs && node ./scripts/copy-wasm.cjs",
+  "prepack": "npm run build",
+  "pack": "npm run build && npm pack",
+  "publish:public": "npm run build && npm publish --access public"
+},
   "files": [
     "dist",
     "LICENSE",
