--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,42 +1,73 @@
 name: build-publish
 
 on:
+  workflow_dispatch:
+    inputs:
+      dryRun:
+        description: "Skip npm publish (build only)"
+        required: false
+        type: boolean
+        default: false
   push:
     tags:
-      - 'v*'             # läuft bei Tag-Push z.B. v0.1.21
+      - "v*"
+      - "*.*.*"
   release:
-    types: [published]   # läuft wenn du im UI auf "Publish release" klickst
-  workflow_dispatch:
+    types: [published]
 
 jobs:
-  build:
+  build-and-publish:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Use Node.js
+        uses: actions/setup-node@v4
         with:
-          fetch-depth: 0
+          node-version: "20.x"
+          cache: "npm"
+          registry-url: "https://registry.npmjs.org"
 
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          registry-url: 'https://registry.npmjs.org'
-
-      - run: npm install
-      - run: npm run build
-      - run: npm pack
-      - run: npm ci
-
-      - name: Publish to npm
+      - name: Verify tag matches package.json version (if running on a tag)
         if: startsWith(github.ref, 'refs/tags/')
-        run: npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          TAG="${GITHUB_REF_NAME#v}"
+          PKG_VERSION=$(node -p "require('./package.json').version")
+          echo "Tag: $TAG"
+          echo "package.json version: $PKG_VERSION"
+          if [ "$TAG" != "$PKG_VERSION" ]; then
+            echo "❌ Tag ($TAG) does not match package.json version ($PKG_VERSION)."
+            exit 1
+          fi
 
-      - name: Upload TGZ artifact
+      - name: Install deps
+        run: |
+          if [ -f package-lock.json ]; then
+            npm ci
+          else
+            npm install
+          fi
+
+      - name: Build
+        run: npm run build
+
+      - name: Pack tarball
+        run: npm pack
+
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: package-tgz
+          name: npm-tarball
           path: "*.tgz"
+
+      - name: Publish to npm
+        if: ${{ !inputs.dryRun }}
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          # --access public is idempotent; it's required the first publish, harmless later
+          npm publish --access public
