--- a/package.json
+++ b/package.json
@@ -1,30 +1,25 @@
 {
   "name": "n8n-nodes-bimx-ifc-qto",
-  "version": "0.1.24",
+  "version": "0.1.25",
   "description": "BIM X – IFC Space QTO (Binary IFC in → XLSX/TSV out) powered by web-ifc",
   "license": "MIT",
   "author": "BIM X Consulting",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "type": "commonjs",
   "keywords": ["n8n-community-node-package", "bim", "ifc", "web-ifc", "qto"],
   "n8n": {
     "nodes": ["dist/nodes/BimxIfcSpaceQto.node.js"],
     "credentials": []
   },
   "scripts": {
-  "build": "tsc && node ./scripts/copy-assets.cjs && node ./scripts/copy-wasm.cjs",
-  "prepack": "npm run build",
-  "pack": "npm run build && npm pack",
-  "publish:public": "npm run build && npm publish --access public"
-},
-  "files": [
-    "dist",
-    "LICENSE",
-    "README.md"
-  ],
+    "build": "tsc && node ./scripts/copy-assets.cjs && node ./scripts/copy-wasm.cjs",
+    "prepack": "npm run build",
+    "pack": "npm run build && npm pack",
+    "publish:public": "npm run build && npm publish --access public"
+  },
+  "files": ["dist", "LICENSE", "README.md"],
   "dependencies": {
-    "web-ifc": "0.0.51",
+    "web-ifc": "^0.0.51",
     "xlsx": "^0.18.5"
   },
   "peerDependencies": {
@@ -37,8 +32,5 @@
   },
   "engines": {
     "node": ">=18"
-  },
-  "publishConfig": {
-    "access": "public"
   }
 }
