--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
   "name": "n8n-nodes-bimx-ifc-qto",
-  "version": "0.1.26",
+  "version": "0.1.27",
   "description": "BIM X – IFC Space QTO (Binary IFC in → XLSX/TSV out) powered by web-ifc",
   "license": "MIT",
   "author": "BIM X Consulting",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "keywords": ["n8n-community-node-package", "bim", "ifc", "web-ifc", "qto"],
-  "n8n": {
-    "nodes": ["dist/nodes/BimxIfcSpaceQto.node.js"],
-    "credentials": []
-  },
+  "keywords": ["n8n-community-node-package","bim","ifc","web-ifc","qto"],
+  "n8n": { "nodes": ["dist/nodes/BimxIfcSpaceQto.node.js"], "credentials": [] },
+
   "scripts": {
-    "build": "tsc && node ./scripts/copy-assets.cjs && node ./scripts/copy-wasm.cjs",
-    "prepack": "npm run build",
+    "build": "tsc && node ./scripts/copy-assets.cjs",
     "pack": "npm run build && npm pack",
     "publish:public": "npm run build && npm publish --access public"
   },
-  "files": ["dist", "LICENSE", "README.md"],
+
+  "files": [
+    "dist",
+    "LICENSE",
+    "README.md"
+  ],
+
   "dependencies": {
     "web-ifc": "^0.0.51",
     "xlsx": "^0.18.5"
@@ -30,7 +33,5 @@
     "typescript": "^5.6.3",
     "n8n-workflow": "*"
   },
-  "engines": {
-    "node": ">=18"
-  }
+  "engines": { "node": ">=18" }
 }
